--- a/GameLogin/GameLogin.vcxproj
+++ b/GameLogin/GameLogin.vcxproj
@@ -191,6 +191,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BaseGame.h" />
     <ClInclude Include="MyFunc.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameLogin.h" />
